--- a/Music Farm v2.Tests/Music Farm v2.Tests.csproj
+++ b/Music Farm v2.Tests/Music Farm v2.Tests.csproj
@@ -116,14 +116,20 @@
     <Compile Include="Mock\Database\BaseMock.cs" />
     <Compile Include="Mock\Database\MockData\MockAlbumTests.cs" />
     <Compile Include="Mock\Database\MockData\MockArtistTests.cs" />
+    <Compile Include="Mock\Database\MockData\MockCommentTests.cs" />
     <Compile Include="Mock\Database\MockData\MockPlayHistoryTests.cs" />
     <Compile Include="Mock\Database\MockData\MockTrafficLogTests.cs" />
+    <Compile Include="Mock\Database\MockData\MockVoteTests.cs" />
     <Compile Include="Mock\Database\MockHelper.cs" />
+    <Compile Include="Mock\Database\MockData\MockUserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="RepositoryTests\RepositoryAlbumTests.cs" />
     <Compile Include="RepositoryTests\RepositoryArtistTest.cs" />
+    <Compile Include="RepositoryTests\RepositoryCommentTests.cs" />
     <Compile Include="RepositoryTests\RepositoryPlayHistoryTests.cs" />
+    <Compile Include="RepositoryTests\RepositoryUserTests.cs" />
+    <Compile Include="RepositoryTests\RepositoryVoteTests.cs" />
     <Compile Include="RepositoryTests\TrafficLogTests.cs" />
   </ItemGroup>
   <ItemGroup>
