--- a/MusicFarmer.Data/App.config
+++ b/MusicFarmer.Data/App.config
@@ -10,5 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
-<connectionStrings><add name="MusicFarmerEntities" connectionString="metadata=res://*/MusicFarmer.csdl|res://*/MusicFarmer.ssdl|res://*/MusicFarmer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=MusicFarmer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="MusicFarmerEntities" connectionString="metadata=res://*/MusicFarmer.csdl|res://*/MusicFarmer.ssdl|res://*/MusicFarmer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=MusicFarmer;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
