--- a/MusicFarmer.Data/Music Farm v2.Data.csproj
+++ b/MusicFarmer.Data/Music Farm v2.Data.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Comment.cs">
       <DependentUpon>MusicFarmer.tt</DependentUpon>
     </Compile>
+    <Compile Include="Favourite.cs">
+      <DependentUpon>MusicFarmer.tt</DependentUpon>
+    </Compile>
     <Compile Include="MusicFarmer.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
