--- a/Music Farm v2/Music Farm v2.csproj
+++ b/Music Farm v2/Music Farm v2.csproj
@@ -168,12 +168,14 @@
     <Compile Include="Context\Repositories\RepositoryAlbum.cs" />
     <Compile Include="Context\Repositories\RepositoryArtist.cs" />
     <Compile Include="Context\Repositories\RepositoryComment.cs" />
+    <Compile Include="Context\Repositories\RepositoryFavourite.cs" />
     <Compile Include="Context\Repositories\RepositoryPlayHistory.cs" />
     <Compile Include="Context\Repositories\RepositoryTrack.cs" />
     <Compile Include="Context\Repositories\RepositoryUser.cs" />
     <Compile Include="Context\Repositories\RepositoryVote.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\Comment\CommentController.cs" />
+    <Compile Include="Controllers\Favourite\FavouriteController.cs" />
     <Compile Include="Controllers\MusicController.cs" />
     <Compile Include="Controllers\Playhistory\PlayHistoryController.cs" />
     <Compile Include="Controllers\Track\TrackController.cs" />
@@ -197,6 +199,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ArtistViewModel.cs" />
     <Compile Include="ViewModels\CommentViewModel.cs" />
+    <Compile Include="ViewModels\FavouriteViewModel.cs" />
     <Compile Include="ViewModels\PlayHistoryViewModel.cs" />
     <Compile Include="ViewModels\TrackViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
@@ -308,6 +311,8 @@
     <Content Include="Views\Comment\GetCommentCount.cshtml" />
     <Content Include="Views\Comment\AddComment.cshtml" />
     <Content Include="Views\Track\Index.cshtml" />
+    <Content Include="Views\Favourite\GetFavouriteCount.cshtml" />
+    <Content Include="Views\Favourite\My.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
