--- a/Music Farm v2/Web.config
+++ b/Music Farm v2/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" executionTimeout="100000" maxRequestLength="214748364" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -45,6 +45,7 @@
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
+    
   </runtime>
   <system.codedom>
     <compilers>
@@ -65,4 +66,5 @@
   <connectionStrings>
     <add name="MusicFarmerEntities" connectionString="metadata=res://*/MusicFarmer.csdl|res://*/MusicFarmer.ssdl|res://*/MusicFarmer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=MusicFarmer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+
 </configuration>
