Minor Bug Fixes, Console App display issue fixed, added some coolness effects

--- a/Music Farm v2/Music Farm v2.csproj
+++ b/Music Farm v2/Music Farm v2.csproj
@@ -262,6 +262,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Custom\VoidControllerAjaxHelper.js" />
     <Content Include="Scripts\jquery-2.2.1.js" />
     <Content Include="Scripts\jquery-2.2.1.min.js" />
     <Content Include="Scripts\jquery-2.2.1.min.map" />
