--- a/Music Farm v2/Web.config
+++ b/Music Farm v2/Web.config
@@ -16,8 +16,9 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" executionTimeout="100000" maxRequestLength="214748364" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="2147483647" executionTimeout="1600" requestLengthDiskThreshold="2147483647" />
   </system.web>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
