--- a/Music Farm v2.Tests/App.config
+++ b/Music Farm v2.Tests/App.config
@@ -10,7 +10,7 @@
   </configSections>
   <appSettings></appSettings>
   <connectionStrings>
-    <add name="MusicFarmerEntities" connectionString="metadata=res://*/Context.Repositories.MusicFarmer.csdl|res://*/Context.Repositories.MusicFarmer.ssdl|res://*/Context.Repositories.MusicFarmer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IG-DEV-IMTIAZB;initial catalog=MusicFarmer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MusicFarmerEntities" connectionString="metadata=res://*/MusicFarmer.csdl|res://*/MusicFarmer.ssdl|res://*/MusicFarmer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=MusicFarmer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
