--- a/Music Farm v2/Views/Web.config
+++ b/Music Farm v2/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="Music_Farm_v2" />
+        <add namespace="MediaFarmer" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
