--- a/Music Farm v2.Tests/MediaFarmer.Tests.csproj
+++ b/Music Farm v2.Tests/MediaFarmer.Tests.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Mock\Database\MockData\MockUserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
+    <Compile Include="RepositoryTests\Helpers\HttpRequestExtensions.cs" />
     <Compile Include="RepositoryTests\RepositoryAlbumTests.cs" />
     <Compile Include="RepositoryTests\RepositoryArtistTest.cs" />
     <Compile Include="RepositoryTests\RepositoryCommentTests.cs" />
