Fixed File Upload, Song Info Edit, Stop Track if Jukebox for all users

--- a/Music Farm v2.Tests/MediaFarmer.Tests.csproj
+++ b/Music Farm v2.Tests/MediaFarmer.Tests.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Mock\Database\MockData\MockArtistTests.cs" />
     <Compile Include="Mock\Database\MockData\MockCommentTests.cs" />
     <Compile Include="Mock\Database\MockData\MockFavouriteTests.cs" />
+    <Compile Include="Mock\Database\MockData\MockJukeBoxTests.cs" />
     <Compile Include="Mock\Database\MockData\MockPlayHistoryTests.cs" />
     <Compile Include="Mock\Database\MockData\MockTrackTests.cs" />
     <Compile Include="Mock\Database\MockData\MockTrafficLogTests.cs" />
@@ -132,6 +133,7 @@
     <Compile Include="RepositoryTests\RepositoryArtistTest.cs" />
     <Compile Include="RepositoryTests\RepositoryCommentTests.cs" />
     <Compile Include="RepositoryTests\RepositoryFavouriteTests.cs" />
+    <Compile Include="RepositoryTests\RepositoryJukeBoxTests.cs" />
     <Compile Include="RepositoryTests\RepositoryPlayHistoryTests.cs" />
     <Compile Include="RepositoryTests\RepositoryTrackTests.cs" />
     <Compile Include="RepositoryTests\RepositoryUserTests.cs" />
@@ -139,7 +141,7 @@
     <Compile Include="RepositoryTests\TrafficLogTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App.config" />
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
