--- a/MusicFarmer.Data/App.config
+++ b/MusicFarmer.Data/App.config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MusicFarmerEntities" connectionString="metadata=res://*/MusicFarmer.csdl|res://*/MusicFarmer.ssdl|res://*/MusicFarmer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=MusicFarmer;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MusicFarmerEntities" connectionString="metadata=res://*/MusicFarmer.csdl|res://*/MusicFarmer.ssdl|res://*/MusicFarmer.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IG-DEV-IMTIAZB;initial catalog=MusicFarmer;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
