--- a/Music Farm v2/MediaFarmer.csproj
+++ b/Music Farm v2/MediaFarmer.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Context\Repositories\RepositoryArtist.cs" />
     <Compile Include="Context\Repositories\RepositoryComment.cs" />
     <Compile Include="Context\Repositories\RepositoryFavourite.cs" />
+    <Compile Include="Context\Repositories\RepositoryJukeBox.cs" />
     <Compile Include="Context\Repositories\RepositoryPlayHistory.cs" />
     <Compile Include="Context\Repositories\RepositoryTrack.cs" />
     <Compile Include="Context\Repositories\RepositoryUser.cs" />
@@ -205,6 +206,7 @@
     <Compile Include="ViewModels\ArtistViewModel.cs" />
     <Compile Include="ViewModels\CommentViewModel.cs" />
     <Compile Include="ViewModels\FavouriteViewModel.cs" />
+    <Compile Include="ViewModels\JukeBoxViewModel.cs" />
     <Compile Include="ViewModels\PlayHistoryViewModel.cs" />
     <Compile Include="ViewModels\TrackViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
@@ -215,6 +217,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Custom\CustomStyles.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\PagedList.css" />
@@ -279,6 +282,7 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <None Include="Properties\PublishProfiles\MediaFarmer.pubxml" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
@@ -293,7 +297,9 @@
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Views\Track\PlayLocal.cshtml" />
+    <Content Include="Views\Track\TrackData.cshtml" />
+    <None Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
