--- a/Music Farm v2/MediaFarmer.csproj
+++ b/Music Farm v2/MediaFarmer.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Context\Extensions\ModelExtensions.cs" />
     <Compile Include="Context\Http\HttpContextManager.cs" />
     <Compile Include="Context\Repositories\ContextData.cs" />
+    <Compile Include="Context\Repositories\RepositorySettings.cs" />
     <Compile Include="Context\Repositories\RepositoryAlbum.cs" />
     <Compile Include="Context\Repositories\RepositoryArtist.cs" />
     <Compile Include="Context\Repositories\RepositoryComment.cs" />
@@ -184,6 +185,7 @@
     <Compile Include="Controllers\Favourite\FavouriteController.cs" />
     <Compile Include="Controllers\MusicController.cs" />
     <Compile Include="Controllers\Playhistory\PlayHistoryController.cs" />
+    <Compile Include="Controllers\Settings\SettingsController.cs" />
     <Compile Include="Controllers\Track\TrackController.cs" />
     <Compile Include="Controllers\Vote\VoteController.cs" />
     <Compile Include="Global.asax.cs">
@@ -201,6 +203,7 @@
     <Compile Include="Models\TrackModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Models\VoteModel.cs" />
+    <Compile Include="ViewModels\SettingValueViewModel.cs" />
     <Compile Include="ViewModels\AlbumViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ArtistViewModel.cs" />
@@ -299,6 +302,8 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="Views\Track\PlayLocal.cshtml" />
     <Content Include="Views\Track\TrackData.cshtml" />
+    <Content Include="Views\Settings\ViewSettings.cshtml" />
+    <Content Include="Views\Settings\Edit.cshtml" />
     <None Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
