--- a/MusicFarmer.Data/MediaFarmer.Data.csproj
+++ b/MusicFarmer.Data/MediaFarmer.Data.csproj
@@ -85,6 +85,9 @@
       <DependentUpon>MusicFarmer.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingValue.cs">
+      <DependentUpon>MusicFarmer.tt</DependentUpon>
+    </Compile>
     <Compile Include="Track.cs">
       <DependentUpon>MusicFarmer.tt</DependentUpon>
     </Compile>
