--- a/MediaFarmer.PlayerService/MediaFarmer.PlayerService.csproj
+++ b/MediaFarmer.PlayerService/MediaFarmer.PlayerService.csproj
@@ -61,6 +61,8 @@
     <Compile Include="MediaFarmerPlayerService.Designer.cs">
       <DependentUpon>MediaFarmerPlayerService.cs</DependentUpon>
     </Compile>
+    <Compile Include="MediaPlayerController.cs" />
+    <Compile Include="PlayListController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="PlayerService.Installer.cs">
       <SubType>Component</SubType>
@@ -69,6 +71,7 @@
       <DependentUpon>PlayerService.Installer.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadedTimers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
