--- a/MediaFarmer.API/packages.config
+++ b/MediaFarmer.API/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
+  <package id="AttributeRouting" version="3.5.6" targetFramework="net452" />
+  <package id="AttributeRouting.Core" version="3.5.6" targetFramework="net452" />
+  <package id="AttributeRouting.Core.Web" version="3.5.6" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
@@ -19,5 +22,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="WebActivator" version="1.0.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
