--- a/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice/packages.config
+++ b/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice/packages.config
@@ -5,8 +5,10 @@
   <package id="Fabric" version="1.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Fody" version="1.29.4" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="FreshMvvm" version="2.2.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="portable45-net45+win8+wpa81" developmentDependency="true" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xam.Plugins.Settings" version="2.5.1.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.175" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="XFBehaviors" version="0.1.0" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
