--- a/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice.csproj
+++ b/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice.csproj
@@ -46,7 +46,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MediaFarmerApi.cs" />
-    <Compile Include="Models\QueTrackResponseModel.cs" />
+    <Compile Include="Models\ResponseModel.cs" />
     <Compile Include="Models\TrackViewModel.cs" />
     <Compile Include="PlayHistoryPage.xaml.cs">
       <DependentUpon>PlayHistoryPage.xaml</DependentUpon>
