--- a/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice.csproj
+++ b/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice/MediaFarmer.MobileDevice.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{5B673FCB-DFBF-4675-8BDA-E2CA7286B553}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MediaFarmer.MobileDevice</RootNamespace>
+    <RootNamespace>MediaFarmer</RootNamespace>
     <AssemblyName>MediaFarmer.MobileDevice</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
