--- a/MediaFarmer.API/packages.config
+++ b/MediaFarmer.API/packages.config
@@ -6,6 +6,7 @@
   <package id="AttributeRouting.Core.Web" version="3.5.6" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
@@ -22,6 +23,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="TrackerEnabledDbContext" version="3.6.1" targetFramework="net452" />
+  <package id="TrackerEnabledDbContext.Common" version="3.6.1" targetFramework="net452" />
   <package id="WebActivator" version="1.0.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
