--- a/MediaFarmer.PlayerService/packages.config
+++ b/MediaFarmer.PlayerService/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net452" />
+  <package id="TrackerEnabledDbContext" version="3.6.1" targetFramework="net452" />
+  <package id="TrackerEnabledDbContext.Common" version="3.6.1" targetFramework="net452" />
 </packages>
