--- a/Music Farm v2.Player/packages.config
+++ b/Music Farm v2.Player/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net452" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="TrackerEnabledDbContext" version="3.6.1" targetFramework="net452" />
+  <package id="TrackerEnabledDbContext.Common" version="3.6.1" targetFramework="net452" />
 </packages>
