--- a/Music Farm v2/packages.config
+++ b/Music Farm v2/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.MappingAPI" version="6.1.0.9" targetFramework="net452" />
   <package id="FontAwesome" version="4.4.0" targetFramework="net452" />
   <package id="jQuery" version="2.2.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -28,6 +29,8 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="toastr" version="2.1.1" targetFramework="net452" />
+  <package id="TrackerEnabledDbContext" version="3.6.1" targetFramework="net452" />
+  <package id="TrackerEnabledDbContext.Common" version="3.6.1" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
